--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "react-input-emoji": "^5.9.0",
     "react-redux": "^9.2.0",
     "react-toastify": "^11.0.2",
+    "socket.io-client": "^4.8.1",
     "tailwind-merge": "^2.5.5",
     "tailwindcss-animate": "^1.0.7",
     "yup": "^1.6.1"
